Updated with Maules Creek

--- a/Datacube_v2_retrieve_and_concatenate_Landsat.ipynb
+++ b/Datacube_v2_retrieve_and_concatenate_Landsat.ipynb
@@ -943,8 +943,8 @@
    "source": [
     "t= 15\n",
     "fig, figsize=(11.69,8.27)\n",
-    "plt.scatter(y=[20], x=[10], c='r')\n",
-    "#plt.plot(y=[25,25], x=[0, rgb.shape[2]], color='r')\n",
+    "plt.scatter(x = xdim, ydim, c='r')\n",
+    "plt.plot((25,25), (0, rgb.shape[2]), color='r')\n",
     "imshow(scaled.isel(time = t), interpolation = 'nearest')\n",
     "#plot(y=[25,25], x=[0, rgb.shape[2]], color='r-')"
    ]
